	 for 'clocks' bitmaps (Stuart).
20071022 disk/{disk.c,wd_fdc.c}: remove TR-DOS workaround, fix formatting, add
	 missing prototypes and use functions instead of macros for CRC_ADD and
	 CRC_PRESET (Stuart).
20071022 disk/wd_fdc.c: fix typo (Stuart).
20071022 disk/{beta.c,plusd.c,wd_fdc.c,wd_fdc.h}: rename cmdint to intrq
	 (Stuart).
20071023 event.c: handle EVENT_TYPE_WD_FDC_TIMEOUT in event_name() (Stuart).
20071023 machines/{pentagon.c,scorpion.c}: don't do beta_reset until we've
         initialised the 128 memory system as beta_reset calls
         machine_current->memory_map() (Fred).
20071023 disk/disk.c: fix Gap IV in open_td0() (thanks, Gergely) (Stuart).
20071023 disk/disk.c: tidyup comments (Stuart).
20071023 disk/beta.c: remove redundant step rates (thanks, Gergely) (Stuart).
20071023 disk/wd_fdc.c: add timeout for Read Address command (part of patch
	 #1779138) (Gergely Szasz).
20071023 z80/{Makefile.am,z80_checks.h,z80_ops.c}: use enumerated feature checks
	 (patch #1785743) (Stuart).
20071023 ChangeLog: add more entries (Stuart).
20071024 fuse.c,if1.c,rzx.c,sound/{aosound.c,sdlsound.c},ui/gtk/debugger.c,
         ui.c,utils.c: tidy up error messages (Stuart).
20071024 ChangeLog,machine.c,machines/{Makefile.am,machines.h,pentagon.c,
	 pentagon1024.c},menu.c,roms/Makefile.am,settings.dat,settings.pl,
	 spectrum.h,tape.c: add Pentagon 512 and Pentagon 1024 emulation
	 (part of patch #1774492) (Q-Master).
20071024 machines/pentagon1024.c: move beta_reset() (Stuart).
20071024 widget/filesel.c: move INPUT_KEY_Return handler into a function
	 to simplify drive selection on Win32 (Stuart).
20071024 widget/filesel.c: add drive selection for Win32 (Stuart).
20071024 widget/filesel.c: fix compilation and improve error handling for
	 drive selection (Stuart).
20071025 machines/{pentagon.c,pentagon1024.c}: fix activation of Beta disk
	 interface on reset (Stuart).
20071025 man/fuse.1: updates for Pentagon 512/1024 emulation (Stuart).