@@ -2208,3 +2208,5 @@
 20071025 machines/{pentagon.c,pentagon1024.c}: fix activation of Beta disk
 	 interface on reset (Stuart).
 20071025 man/fuse.1: updates for Pentagon 512/1024 emulation (Stuart).
+20071025 fuse.c,widget/filesel.c: set error handling mode on Win32, and use
+	 chdir() for drive selection on Win32 (Stuart).
